feat: 가이드북 출판 포인트 설정 로직 추가